--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,8 +7,7 @@ const navItems = [
   { href: '/', text: 'Home' },
   { href: '/blog', text: 'Blog' },
   { href: '/tags', text: 'Tags' },
-  { href: '/archive', text: 'Archive' },
-  { href: 'https://github.com/larry-xue/astro-zen-blog', text: 'Repo' },
+  { href: '/archive', text: 'Archive' }
 ];
 ---
 
